--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -271,7 +271,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: '16'
+          java-version: '8'
 
       - name: "Checkout api reference"
         uses: actions/checkout@v3
@@ -324,6 +324,12 @@ jobs:
           IMPORT_RAML: "../commercetools-api-reference/api-specs/importapi/api.raml"
           ML_RAML: "../commercetools-api-reference/api-specs/ml/api.raml"
           HISTORY_RAML: "../commercetools-api-reference/api-specs/history/api.raml"
+
+      - name: 'Setup Java'
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '16'
 
       - name: "Checkout previous api reference"
         uses: actions/checkout@v3
