--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,10 @@
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - 'main'
-    tags:
-      - '*'
+#  push:
+#    branches:
+#      - 'main'
+#    tags:
+#      - '*'
 
 name: Docker
 
