use language specific printers

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -140,16 +140,16 @@ jobs:
         working-directory: commercetools-api-reference-previous
 
       - name: "Calculate diff (API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f PHP_MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: "Calculate diff (Import API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+        run: rmf-codegen diff -f PHP_MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: "Calculate diff (History)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+        run: rmf-codegen diff -f PHP_MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: "Calculate diff (ML)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+        run: rmf-codegen diff -f PHP_MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
 
       - name: 'Create change file'
         run: |
@@ -350,16 +350,16 @@ jobs:
         working-directory: commercetools-api-reference-previous
 
       - name: "Calculate diff (API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: "Calculate diff (Import API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+        run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: "Calculate diff (History)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+        run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: "Calculate diff (ML)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+        run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
 
       - name: 'Create change file'
         run: |
@@ -501,16 +501,16 @@ jobs:
         working-directory: commercetools-api-reference-previous
 
       - name: "Calculate diff (API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f TS_MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: "Calculate diff (Import API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+        run: rmf-codegen diff -f TS_MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: "Calculate diff (History)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+        run: rmf-codegen diff -f TS_MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: "Calculate diff (ML)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+        run: rmf-codegen diff -f TS_MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
 
       - name: 'Create change file'
         run: |
@@ -665,16 +665,16 @@ jobs:
         working-directory: commercetools-api-reference-previous
 
       - name: "Calculate diff (API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f DOTNET_MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
 
       - name: "Calculate diff (Import API)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
+        run: rmf-codegen diff -f DOTNET_MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
 
       - name: "Calculate diff (History)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
+        run: rmf-codegen diff -f DOTNET_MARKDOWN -o ./changes_history.md commercetools-api-reference-previous/api-specs/history/api.raml commercetools-api-reference/api-specs/history/api.raml
 
       - name: "Calculate diff (ML)"
-        run: rmf-codegen diff -f MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
+        run: rmf-codegen diff -f DOTNET_MARKDOWN -o ./changes_ml.md commercetools-api-reference-previous/api-specs/ml/api.raml commercetools-api-reference/api-specs/ml/api.raml
 
       - name: 'Create change file'
         run: |
