write SHA references to SDK repos

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -122,8 +122,9 @@ jobs:
       - name: "Store api reference version"
         run: |
           if [ ! -f ../commercetools-sdk-php-v2/reference.txt ]; then
-            git log --format='%H' --no-merges -n 1 --skip 1 >> ../commercetools-sdk-php-v2/reference.txt
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-php-v2/reference.txt
           fi
+          echo "${{ github.sha}}" >> ../commercetools-sdk-php-v2/references.txt
           echo "previous=$(cat ../commercetools-sdk-php-v2/reference.txt | head -n 1)" >> $GITHUB_ENV
         working-directory: commercetools-api-reference-previous
 
@@ -324,8 +325,9 @@ jobs:
       - name: "Store api reference version"
         run: |
           if [ ! -f ../commercetools-sdk-java-v2/reference.txt ]; then
-            git log --format='%H' --no-merges -n 1 --skip 1 >> ../commercetools-sdk-java-v2/reference.txt
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-java-v2/reference.txt
           fi
+          echo "${{ github.sha}}" >> ../commercetools-sdk-java-v2/references.txt
           echo "previous=$(cat ../commercetools-sdk-java-v2/reference.txt | head -n 1)" >> $GITHUB_ENV
         working-directory: commercetools-api-reference-previous
 
@@ -467,8 +469,9 @@ jobs:
       - name: "Store api reference version"
         run: |
           if [ ! -f ../commercetools-sdk-typescript/reference.txt ]; then
-            git log --format='%H' --no-merges -n 1 --skip 1 >> ../commercetools-sdk-typescript/reference.txt
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-sdk-typescript/reference.txt
           fi
+          echo "${{ github.sha}}" >> ../commercetools-sdk-typescript/references.txt
           echo "previous=$(cat ../commercetools-sdk-typescript/reference.txt | head -n 1)" >> $GITHUB_ENV
         working-directory: commercetools-api-reference-previous
 
@@ -623,8 +626,9 @@ jobs:
       - name: "Store api reference version"
         run: |
           if [ ! -f ../commercetools-dotnet-core-sdk-v2/reference.txt ]; then
-            git log --format='%H' --no-merges -n 1 --skip 1 >> ../commercetools-dotnet-core-sdk-v2/reference.txt
+            git log --format='%H' --no-merges -n 1 --skip 1 > ../commercetools-dotnet-core-sdk-v2/reference.txt
           fi
+          echo "${{ github.sha}}" >> ../commercetools-dotnet-core-sdk-v2/references.txt
           echo "previous=$(cat ../commercetools-dotnet-core-sdk-v2/reference.txt | head -n 1)" >> $GITHUB_ENV
         working-directory: commercetools-api-reference-previous
 
