--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -300,6 +300,10 @@ jobs:
         run: |
           cp commercetools-sdk-java-v2/api-java-mixin.raml commercetools-api-reference/api-specs/api/java-mixin.raml
 
+      - name: "Update GraphQL schema"
+        run: |
+          cp commercetools-api-reference/api-specs/graphql/schema.sdl commercetools-sdk-java-v2/commercetools/commercetools-graphql-api/src/main/resources/graphql/schema.graphqls
+
       - name: "Generate Java SDK"
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: commercetools-sdk-java-v2
