update graphql schema for java SDK

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -303,7 +303,7 @@ jobs:
       - name: "Update GraphQL schema"
         run: |
           cp commercetools-api-reference/api-specs/graphql/schema.sdl commercetools-sdk-java-v2/commercetools/commercetools-graphql-api/src/main/resources/graphql/schema.graphqls
-          sed -i '' 's/^type Query implements.*/type Query {/' commercetools-sdk-java-v2/commercetools/commercetools-graphql-api/src/main/resources/graphql/schema.graphqls
+          sed -i 's/^type Query implements.*/type Query {/' commercetools-sdk-java-v2/commercetools/commercetools-graphql-api/src/main/resources/graphql/schema.graphqls
       - name: "Generate Java SDK"
         run: sudo chmod 777 /usr/local/bin && make build
         working-directory: commercetools-sdk-java-v2
