apply java mixin for changelog

--- a/.github/workflows/sdk-java.yml
+++ b/.github/workflows/sdk-java.yml
@@ -86,8 +86,12 @@ jobs:
         run: git checkout ${{ env.previous }}
         working-directory: commercetools-api-reference-previous
 
+      - name: "Apply Java SDK mixin"
+        run: |
+          cp commercetools-sdk-java-v2/api-java-mixin.raml commercetools-api-reference-previous/api-specs/api/java-mixin.raml
+
       - name: "Calculate diff (API)"
-        run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/api.raml commercetools-api-reference/api-specs/api/api.raml
+        run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_api.md commercetools-api-reference-previous/api-specs/api/java-mixin.raml commercetools-api-reference/api-specs/api/java-mixin.raml
 
       - name: "Calculate diff (Import API)"
         run: rmf-codegen diff -f JAVA_MARKDOWN -o ./changes_import.md commercetools-api-reference-previous/api-specs/importapi/api.raml commercetools-api-reference/api-specs/importapi/api.raml
